plugins {
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
}

group 'com.kraft.book'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // 기존 Mustache 제거
    // implementation 'org.springframework.boot:spring-boot-starter-mustache'

    runtimeOnly 'com.mysql:mysql-connector-j'
    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
    implementation "org.springframework.boot:spring-boot-starter-security"

    // H2 (메모리 DB)
    // runtimeOnly 'com.h2database:h2'
    //testRuntimeOnly 'com.h2database:h2'

    // 테스트 코드에서 Lombok 사용 시
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    jvmArgs += ['-Dfile.encoding=UTF-8', '-XX:+EnableDynamicAgentLoading'] // Byte Buddy 경고도 숨김
    useJUnitPlatform()
}
